spike: run tests in parallel

--- a/azure-pipeline/build-artifacts-and-some-tests-job-steps.yaml
+++ b/azure-pipeline/build-artifacts-and-some-tests-job-steps.yaml
@@ -17,6 +17,9 @@ steps:
           yarn lint:check
       displayName: run linter
 
+    - template: ./test-steps.yaml
+      parameters: { totalSlices: '${{ parameters.totalSlices }}', slicesToRun: '${{ parameters.slicesToRun }}' }
+
     - script: |
           yarn run pack
       displayName: create npm package zips
