--- a/azure-pipeline/build-steps.yaml
+++ b/azure-pipeline/build-steps.yaml
@@ -2,6 +2,10 @@
 # Licensed under the MIT License.
 steps:
     - script: |
+          yarn clean
+      displayName: clean
+
+    - script: |
           # 1st '--' needed for yarn since, yarn won't pass the first argument if it is --; 2nd '--' lets lerna to pass on anything after this as args;
           yarn build -- -- --env.version=$(Build.BuildId)
       displayName: build
