--- a/packages/web-api-scan-request-sender/package.json
+++ b/packages/web-api-scan-request-sender/package.json
@@ -47,6 +47,7 @@
         "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0",
         "storage-documents": "1.0.0",
+        "lodash": "^4.17.14",
         "why-is-node-running": "^2.1.0"
     }
 }
