--- a/packages/resource-deployment/runtime-config/runtime-config.prod.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.prod.json
@@ -1,6 +1,6 @@
 {
     "featureFlags": {
-        "sendNotification": false
+        "sendNotification": true
     },
     "logConfig": {
         "logInConsole": true
