--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,6 +32,7 @@
         "@types/lodash": "^4.14.150",
         "@types/node": "^13.13.4",
         "@types/request-promise": "^4.1.46",
+        "@types/table": "^5.0.0",
         "copy-webpack-plugin": "^5.1.1",
         "fork-ts-checker-webpack-plugin": "^4.1.3",
         "jest": "^25.4.0",
@@ -62,7 +63,8 @@
         "puppeteer": "^3.0.2",
         "react-helmet": "^6.0.0",
         "reflect-metadata": "^0.1.13",
-        "yargs": "^15.3.1"
+        "yargs": "^15.3.1",
+        "table": "^5.4.6"
     },
     "bin": {
         "ai-scan": "dist/ai-scan-cli.js"
