--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -59,12 +59,13 @@
         "dotenv": "^8.2.0",
         "filenamify-url": "2.1.1",
         "inversify": "^5.0.1",
+        "line-reader": "^0.4.0",
         "lodash": "^4.17.14",
         "puppeteer": "^3.0.2",
         "react-helmet": "^6.0.0",
         "reflect-metadata": "^0.1.13",
-        "yargs": "^15.3.1",
-        "table": "^5.4.6"
+        "table": "^5.4.6",
+        "yargs": "^15.3.1"
     },
     "bin": {
         "ai-scan": "dist/ai-scan-cli.js"
