--- a/packages/web-api/package.json
+++ b/packages/web-api/package.json
@@ -48,8 +48,7 @@
         "typemoq": "^2.1.0",
         "typescript": "^3.8.3",
         "webpack": "^4.43.0",
-        "webpack-cli": "^3.2.3",
-        "mockdate": "^2.0.5"
+        "webpack-cli": "^3.2.3"
     },
     "dependencies": {
         "azure-services": "1.0.0",
