--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -57,7 +57,8 @@
         "axe-puppeteer": "^1.1.0",
         "cli-spinner": "^0.2.10",
         "dotenv": "^8.2.0",
-        "filenamify-url": "2.1.1",
+        "filenamify-url": "^2.1.1",
+        "filenamify": "^4.1.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.14",
         "puppeteer": "^3.0.2",
