--- a/packages/crawler-library/.vscode/launch.json
+++ b/packages/crawler-library/.vscode/launch.json
@@ -15,7 +15,7 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "smartStep": true,
-            "args": ["--url", "https://beta.support.xbox.com/", "--simulate", "--selectors", "button"]
+            "args": ["--url", "https://beta.support.xbox.com/", "--simulate", "--selectors", "\"button\""]
         }
     ]
 }
