--- a/packages/crawler-library/package.json
+++ b/packages/crawler-library/package.json
@@ -3,9 +3,11 @@
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
-        "build": "tsc && echo",
-        "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist test-results",
+        "build": "npm-run-all --serial build:ts build:imports",
+        "build:ts": "tsc && echo",
+        "build:imports": "rollup -c",
+        "cbuild": "npm-run-all --serial clean build",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
         "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
         "test": "jest --coverage --colors",
@@ -23,9 +25,12 @@
     },
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^11.1.0",
+        "@rollup/plugin-node-resolve": "^7.1.3",
         "@types/cheerio": "^0.22.17",
         "@types/jest": "^25.1.4",
         "@types/node": "^13.9.5",
+        "rollup": "^2.10.0",
         "jest": "^25.1.0",
         "jest-circus": "^25.1.0",
         "jest-junit": "^10.0.0",
@@ -37,19 +42,20 @@
         "typescript": "^3.8.3"
     },
     "dependencies": {
+        "@medv/finder": "^1.1.3",
         "accessibility-insights-report": "^1.0.2",
         "apify": "^0.20.2",
         "apify-shared": "^0.2.12",
         "axe-core": "^3.5.3",
         "axe-puppeteer": "^1.1.0",
         "cheerio": "^1.0.0-rc.3",
-        "sha.js": "^2.4.11",
         "dotenv": "^8.2.0",
         "esm": "^3.2.25",
         "inversify": "^5.0.1",
         "lodash": "^4.17.14",
         "puppeteer": "^3.0.2",
         "reflect-metadata": "^0.1.13",
+        "sha.js": "^2.4.11",
         "yargs": "^15.3.1"
     }
 }
