--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -48,6 +48,7 @@
     },
     "dependencies": {
         "@azure/cosmos": "^3.6.3",
+        "accessibility-insights-report": "^1.0.3",
         "axe-core": "3.5.1",
         "axe-puppeteer": "^1.1.0",
         "axe-sarif-converter": "^2.1.0",
@@ -64,7 +65,6 @@
         "sha.js": "^2.4.11",
         "storage-documents": "1.0.0",
         "verror": "^1.10.0",
-        "yargs": "^15.3.1",
-        "accessibility-insights-report": "^1.0.3"
+        "yargs": "^15.3.1"
     }
 }
