--- a/package.json
+++ b/package.json
@@ -51,10 +51,15 @@
     },
     "resolutions": {
         "jquery": "^3.4.1",
+        "puppeteer": "2.0.0",
+        "axe-core": "3.5.1",
+        "lodash": "^4.17.14",
         "https-proxy-agent": "^3.0.1",
         "serialize-javascript": "^2.1.1",
         "minimist": "^1.2.2",
         "dot-prop": "^5.2.0",
+        "yargs": "^15.3.1",
+        "yargs-parser": "^18.1.3",
         "kind-of": "^6.0.3"
     }
 }
