--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -45,6 +45,7 @@
         "lodash": "^4.17.14",
         "reflect-metadata": "^0.1.13",
         "verror": "^1.10.0",
-        "yargs": "^15.3.1"
+        "yargs": "^15.3.1",
+        "moment": "^2.27.0"
     }
 }
