--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -67,6 +67,7 @@
         "puppeteer": "^4.0.0",
         "react-helmet": "^6.1.0",
         "reflect-metadata": "^0.1.13",
+        "serialize-error": "^7.0.1",
         "table": "^5.4.6",
         "yargs": "^15.3.1"
     },
