--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -43,6 +43,7 @@
         "inversify": "^5.0.1",
         "lodash": "^4.17.14",
         "reflect-metadata": "^0.1.13",
+        "serialize-error": "^7.0.1",
         "sha.js": "^2.4.11",
         "uuid-with-v6": "^1.1.2",
         "wtfnode": "^0.8.1"
