--- a/packages/web-api-send-notification-job-manager/package.json
+++ b/packages/web-api-send-notification-job-manager/package.json
@@ -44,7 +44,7 @@
     },
     "dependencies": {
         "@azure/batch": "^7.0.0",
-        "@azure/ms-rest-nodeauth": "^1.1.1",
+        "@azure/ms-rest-nodeauth": "^3.0.5",
         "azure-services": "1.0.0",
         "common": "1.0.0",
         "dotenv": "^8.2.0",
@@ -54,7 +54,7 @@
         "moment": "^2.27.0",
         "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0",
-        "verror": "^1.10.0",
-        "storage-documents": "1.0.0"
+        "storage-documents": "1.0.0",
+        "verror": "^1.10.0"
     }
 }
