Batch task manager retry update. (#928)
* Set job manager max wall clock in sync with task run time

* Delete fixed package resolution

* Revert "Delete fixed package resolution"

This reverts commit 7f58eef1ec3e8fd454fce256991ad4057652a99f.

* Working set

* Revert "Working set"

This reverts commit b01a7b4656d07c8781e013c0612cd6c93a2f1db6.

* Serialize errors refactoring

* Expand tests

* Expand tests

* Validate test run

* Convert task manager to support retry

* Working set

* Revert ms-rest-nodeauth npm version

* Validate error type

* Handle tasks re-ocurrency

* Convert abstract to interface

* Expand tests

* Reduce scan task manager wall clock run

* Master branch merge

--- a/packages/web-api-send-notification-job-manager/package.json
+++ b/packages/web-api-send-notification-job-manager/package.json
@@ -54,7 +54,7 @@
         "moment": "^2.27.0",
         "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0",
-        "verror": "^1.10.0",
-        "storage-documents": "1.0.0"
+        "storage-documents": "1.0.0",
+        "verror": "^1.10.0"
     }
 }
