--- a/packages/service-library/package.json
+++ b/packages/service-library/package.json
@@ -30,6 +30,7 @@
         "jest": "^26.1.0",
         "jest-circus": "^25.5.3",
         "jest-junit": "^11.0.1",
+        "mockdate": "^3.0.2",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.1.3",
         "tslint": "^6.1.2",
