--- a/packages/web-api-scan-job-manager/package.json
+++ b/packages/web-api-scan-job-manager/package.json
@@ -31,6 +31,7 @@
         "jest": "^26.1.0",
         "jest-circus": "^25.5.3",
         "jest-junit": "^11.0.1",
+        "mockdate": "^3.0.2",
         "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.1.3",
