--- a/license-check-and-add-config.json
+++ b/license-check-and-add-config.json
@@ -17,7 +17,10 @@
         "**/.gitattributes",
         "**/test-results",
         "**/dist",
-        "**/*.snap"
+        "**/*.snap",
+        "**/.dockerignore",
+        "**/Dockerfile",
+        "**/package.json"
     ],
     "license": "./copyright-header.txt",
     "licenseFormats": {
