--- a/packages/resource-deployment/templates/function-web-api-app-template.json
+++ b/packages/resource-deployment/templates/function-web-api-app-template.json
@@ -69,6 +69,12 @@
             "metadata": {
                 "description": "Release version number"
             }
+        },
+        "apimIpAddress": {
+            "type": "string",
+            "metadata": {
+                "description": "Public IP address of APIM instance"
+            }
         }
     },
     "resources": [
@@ -140,7 +146,23 @@
                         "tokenStoreEnabled": true,
                         "defaultProvider": "AzureActiveDirectory",
                         "clientId": "[parameters('clientId')]",
-                        "issuer": "[concat('https://sts.windows.net/', parameters('tenantId'), '/')]"
+                        "issuer": "[concat('https://sts.windows.net/', parameters('tenantId'), '/')]",
+                        "ipSecurityRestrictions": [
+                            {
+                                "ipAddress": "[parameters('apimIpAddress')]",
+                                "action": "Allow",
+                                "tag": "Default",
+                                "priority": 200,
+                                "name": "APIM"
+                            },
+                            {
+                                "ipAddress": "Any",
+                                "action": "Deny",
+                                "priority": 2147483647,
+                                "name": "Deny all",
+                                "description": "Deny all access"
+                            }
+                        ]
                     }
                 }
             ]
