fix local package import

--- a/packages/web-api-scan-job-manager/docker-image-config/Dockerfile
+++ b/packages/web-api-scan-job-manager/docker-image-config/Dockerfile
@@ -9,4 +9,4 @@ RUN npm install
 # Bundle app source
 COPY . .
 
-ENTRYPOINT [ "node", "../index.js" ]
+ENTRYPOINT [ "node", "../web-api-scan-job-manager.js" ]
