--- a/packages/web-api-scan-job-manager/package.json
+++ b/packages/web-api-scan-job-manager/package.json
@@ -46,16 +46,12 @@
     "dependencies": {
         "@azure/batch": "^7.0.0",
         "@azure/ms-rest-nodeauth": "^1.1.1",
-        "azure-services": "1.0.0",
-        "common": "1.0.0",
         "dotenv": "^8.2.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.19",
-        "logger": "1.0.0",
         "moment": "^2.27.0",
         "reflect-metadata": "^0.1.13",
-        "service-library": "1.0.0",
         "verror": "^1.10.0",
-        "storage-documents": "1.0.0"
+        "applicationinsights": "^1.8.0"
     }
 }
