--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -52,19 +52,14 @@
         "axe-core": "3.5.1",
         "axe-puppeteer": "^1.1.0",
         "axe-sarif-converter": "^2.1.0",
-        "azure-services": "1.0.0",
-        "common": "1.0.0",
         "dotenv": "^8.2.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.19",
-        "logger": "1.0.0",
         "puppeteer": "^4.0.0",
         "reflect-metadata": "^0.1.13",
-        "scanner": "1.0.0",
-        "service-library": "1.0.0",
         "sha.js": "^2.4.11",
-        "storage-documents": "1.0.0",
         "verror": "^1.10.0",
-        "yargs": "^15.3.1"
+        "yargs": "^15.3.1",
+        "applicationinsights": "^1.8.0"
     }
 }
