--- a/packages/web-api-scan-job-manager/docker-image-config/package.json
+++ b/packages/web-api-scan-job-manager/docker-image-config/package.json
@@ -2,8 +2,7 @@
     "name": "web-api-scan-job-manager",
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
-    "scripts": {
-    },
+    "scripts": {},
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Microsoft/accessibility-insights-service.git"
@@ -14,8 +13,7 @@
         "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
     },
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
-    "devDependencies": {
-    },
+    "devDependencies": {},
     "dependencies": {
         "yargs": "^15.3.1",
         "applicationinsights": "^1.8.0"
