setup env vars / arguments and runtime configs

--- a/license-check-and-add-config.json
+++ b/license-check-and-add-config.json
@@ -19,7 +19,7 @@
         "**/dist",
         "**/*.snap",
         "**/.dockerignore",
-        "**/Dockerfile",
+        "**/Dockerfile-Template",
         "**/package.json"
     ],
     "license": "./copyright-header.txt",
