--- a/packages/resource-deployment/templates/function-web-workers-app-template.json
+++ b/packages/resource-deployment/templates/function-web-workers-app-template.json
@@ -75,6 +75,7 @@
                 "type": "SystemAssigned"
             },
             "properties": {
+                "httpsOnly": true,
                 "siteConfig": {
                     "appSettings": [
                         {
