Enable job manager image to run on VM

--- a/packages/web-api-scan-runner/docker-image-config/Dockerfile-Template
+++ b/packages/web-api-scan-runner/docker-image-config/Dockerfile-Template
@@ -26,5 +26,5 @@ RUN npm install
 # Bundle app source
 COPY . .
 
-ENTRYPOINT [ "node", "web-api-scan-runner.js" ]
+ENTRYPOINT [ "node", "./web-api-scan-runner.js" ]
 CMD [${arg}]
