--- a/packages/web-api-scan-job-manager/docker-image-config/Dockerfile-Template
+++ b/packages/web-api-scan-job-manager/docker-image-config/Dockerfile-Template
@@ -18,4 +18,4 @@ RUN npm install
 # Bundle app source
 COPY . .
 
-ENTRYPOINT [ "node", "../web-api-scan-job-manager.js" ]
+ENTRYPOINT [ "node", "./web-api-scan-job-manager.js" ]
