Convert batch wrapper to support container tasks

--- a/packages/web-api-scan-runner/docker-image-config/Dockerfile
+++ b/packages/web-api-scan-runner/docker-image-config/Dockerfile
@@ -3,10 +3,8 @@
 FROM node:12-slim
 
 # Set Environment variables
-ENV APPINSIGHTS_INSTRUMENTATIONKEY=%APP_INSIGHTS_TOKEN%
 ENV AZURE_STORAGE_SCAN_QUEUE=ondemand-scanrequest
 ENV AZURE_STORAGE_NOTIFICATION_QUEUE=ondemand-send-notification
-ENV KEY_VAULT_URL=%KEY_VAULT_TOKEN%
 
 # Copy configuration
 COPY runtime-config*.json ./
@@ -17,7 +15,8 @@ RUN dpkg --configure -a \
     && apt-get install -y wget gnupg \
     && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
     && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >/etc/apt/sources.list.d/google.list' \
-	&& apt-get update && apt-get install -y google-chrome-stable
+    && apt-get update \
+    && apt-get install -y google-chrome-stable
 
 # Install app dependencies
 COPY package*.json ./
@@ -27,4 +26,3 @@ RUN npm install
 COPY . .
 
 ENTRYPOINT [ "node", "./web-api-scan-runner.js" ]
-CMD [${arg}]
