--- a/packages/web-api-scan-runner/docker-image-config/package.json
+++ b/packages/web-api-scan-runner/docker-image-config/package.json
@@ -15,6 +15,7 @@
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {},
     "dependencies": {
+        "axe-core": "3.5.1",
         "axe-puppeteer": "^1.1.0",
         "puppeteer": "^4.0.0",
         "yargs": "^15.3.1",
