--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -44,6 +44,7 @@
         "axe-puppeteer": "^1.1.0",
         "cheerio": "^1.0.0-rc.3",
         "dotenv": "^8.2.0",
+        "esm": "^3.2.25",
         "inversify": "^5.0.1",
         "lodash": "^4.17.14",
         "puppeteer": "^4.0.0",
