--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,15 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Debug current test file in VSCode",
             "type": "node",
             "request": "launch",
-            "name": "Debug current unit test file",
-            "program": "${workspaceFolder:root}/node_modules/jest/bin/jest",
-            // ${relativeFile} returns path with back slash. jest can't find the file if we use back slash. So, just passing file name instead
-            "args": ["${fileBasename}", "--runInBand", "--coverage=false"],
+            "runtimeArgs": [
+                "--inspect-brk",
+                "${workspaceRoot}/node_modules/jest/bin/jest.js",
+                "--runInBand",
+                "${fileBasename}",
+                "--coverage",
+                "false"
+            ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
-            "cwd": "${fileDirname}"
+            "port": 9229
         }
     ]
 }
