--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -57,6 +57,7 @@
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
         "yargs": "^15.3.1",
+        "logger": "1.0.0",
         "common": "1.0.0"
     }
 }
