--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -56,6 +56,7 @@
         "azure-services": "1.0.0",
         "common": "1.0.0",
         "dotenv": "^8.2.0",
+        "esm": "^3.2.25",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
         "logger": "1.0.0",
