--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,80 +1,80 @@
 {
-    "name": "accessibility-insights-scan",
-    "version": "0.2.5",
-    "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
-    "scripts": {
-        "build": "webpack --config ./webpack.config.js --colors",
-        "cbuild": "npm-run-all --serial clean build",
-        "pack": "npm-run-all --serial create-drop-dir pack-to-drop-dir",
-        "pack-to-drop-dir": "yarn pack --filename drop/cli.tgz",
-        "create-drop-dir": "npx mkdirp drop",
-        "clean": "rimraf dist drop test-results",
-        "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
-        "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
-        "test": "jest --coverage --colors"
-    },
-    "files": [
-        "dist/",
-        "../../LICENSE",
-        "README.md"
-    ],
-    "repository": "git+https://github.com/Microsoft/accessibility-insights-service.git",
-    "main": "dist/index.js",
-    "author": "Microsoft",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
-    },
-    "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
-    "devDependencies": {
-        "@types/cli-spinner": "^0.2.0",
-        "@types/jest": "^26.0.9",
-        "@types/lodash": "^4.14.159",
-        "@types/node": "^14.0.27",
-        "@types/request-promise": "^4.1.46",
-        "@types/table": "^5.0.0",
-        "copy-webpack-plugin": "^5.1.1",
-        "fork-ts-checker-webpack-plugin": "^5.0.7",
-        "jest": "^26.1.0",
-        "jest-circus": "^26.4.0",
-        "jest-junit": "^11.1.0",
-        "mkdirp": "^1.0.4",
-        "mockdate": "^3.0.2",
-        "rimraf": "^3.0.2",
-        "shebang-loader": "^0.0.1",
-        "ts-jest": "^26.1.3",
-        "tslint": "^6.1.2",
-        "tslint-microsoft-contrib": "^6.0.0",
-        "typemoq": "^2.1.0",
-        "typescript": "^3.9.7",
-        "webpack": "^4.44.1",
-        "webpack-cli": "^3.3.12",
-        "webpack-node-externals": "^2.5.1"
-    },
-    "dependencies": {
-        "@types/escape-html": "^0.0.20",
-        "accessibility-insights-report": "^1.0.3",
-        "axe-core": "3.5.1",
-        "axe-puppeteer": "^1.1.0",
-        "cli-spinner": "^0.2.10",
-        "dotenv": "^8.2.0",
-        "filenamify-url": "^2.1.1",
-        "filenamify": "^4.1.0",
-        "escape-html": "^1.0.3",
-        "inversify": "^5.0.1",
-        "lodash": "^4.17.20",
-        "pretty": "^2.0.0",
-        "puppeteer": "^4.0.0",
-        "react-helmet": "^6.1.0",
-        "reflect-metadata": "^0.1.13",
-        "serialize-error": "^7.0.1",
-        "table": "^5.4.6",
-        "yargs": "^15.3.1"
-    },
-    "bin": {
-        "ai-scan": "dist/ai-scan-cli.js"
-    },
-    "engines": {
-        "node": ">=10.18"
-    }
+  "name": "accessibility-insights-scan",
+  "version": "0.2.5",
+  "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
+  "scripts": {
+    "build": "webpack --config ./webpack.config.js --colors",
+    "cbuild": "npm-run-all --serial clean build",
+    "pack": "npm-run-all --serial create-drop-dir pack-to-drop-dir",
+    "pack-to-drop-dir": "yarn pack --filename drop/cli.tgz",
+    "create-drop-dir": "npx mkdirp drop",
+    "clean": "rimraf dist drop test-results",
+    "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
+    "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
+    "test": "jest --coverage --colors"
+  },
+  "files": [
+    "dist/",
+    "../../LICENSE",
+    "README.md"
+  ],
+  "repository": "git+https://github.com/Microsoft/accessibility-insights-service.git",
+  "main": "dist/index.js",
+  "author": "Microsoft",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
+  },
+  "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
+  "devDependencies": {
+    "@types/cli-spinner": "^0.2.0",
+    "@types/jest": "^26.0.9",
+    "@types/lodash": "^4.14.159",
+    "@types/node": "^12.12.54",
+    "@types/request-promise": "^4.1.46",
+    "@types/table": "^5.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "fork-ts-checker-webpack-plugin": "^5.0.7",
+    "jest": "^26.1.0",
+    "jest-circus": "^26.4.0",
+    "jest-junit": "^11.1.0",
+    "mkdirp": "^1.0.4",
+    "mockdate": "^3.0.2",
+    "rimraf": "^3.0.2",
+    "shebang-loader": "^0.0.1",
+    "ts-jest": "^26.1.3",
+    "tslint": "^6.1.2",
+    "tslint-microsoft-contrib": "^6.0.0",
+    "typemoq": "^2.1.0",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-node-externals": "^2.5.1"
+  },
+  "dependencies": {
+    "@types/escape-html": "^0.0.20",
+    "accessibility-insights-report": "^1.0.3",
+    "axe-core": "^3.5.3",
+    "axe-puppeteer": "^1.1.0",
+    "cli-spinner": "^0.2.10",
+    "dotenv": "^8.2.0",
+    "filenamify-url": "^2.1.1",
+    "filenamify": "^4.1.0",
+    "escape-html": "^1.0.3",
+    "inversify": "^5.0.1",
+    "lodash": "^4.17.20",
+    "pretty": "^2.0.0",
+    "puppeteer": "^4.0.0",
+    "react-helmet": "^6.1.0",
+    "reflect-metadata": "^0.1.13",
+    "serialize-error": "^7.0.1",
+    "table": "^5.4.6",
+    "yargs": "^15.3.1"
+  },
+  "bin": {
+    "ai-scan": "dist/ai-scan-cli.js"
+  },
+  "engines": {
+    "node": ">=10.18"
+  }
 }
