--- a/packages/web-api-scan-request-sender/package.json
+++ b/packages/web-api-scan-request-sender/package.json
@@ -1,55 +1,55 @@
 {
-    "name": "web-api-scan-request-sender",
-    "version": "1.0.0",
-    "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
-    "scripts": {
-        "build": "webpack --config ./webpack.config.js --colors && node ../../create-docker-image-package-json.js",
-        "cbuild": "npm-run-all --serial clean build",
-        "clean": "rimraf dist test-results",
-        "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
-        "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
-        "test": "jest --coverage --colors"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Microsoft/accessibility-insights-service.git"
-    },
-    "author": "Microsoft",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
-    },
-    "homepage": "https://github.com/Microsoft/accessibility-insights-service/tree/master/packages/web-api-scan-request-sender#readme",
-    "devDependencies": {
-        "@types/jest": "^26.0.9",
-        "copy-webpack-plugin": "^5.1.1",
-        "fork-ts-checker-webpack-plugin": "^5.0.7",
-        "jest": "^26.1.0",
-        "jest-circus": "^26.4.0",
-        "jest-junit": "^11.1.0",
-        "mockdate": "^3.0.2",
-        "npm-run-all": "^4.1.5",
-        "rimraf": "^3.0.2",
-        "ts-jest": "^26.1.3",
-        "ts-loader": "^8.0.0",
-        "tslint": "6.1.2",
-        "tslint-microsoft-contrib": "6.0.0",
-        "typemoq": "^2.1.0",
-        "typescript": "^3.9.7",
-        "webpack": "^4.44.1",
-        "webpack-cli": "^3.3.12"
-    },
-    "dependencies": {
-        "applicationinsights": "^1.8.0",
-        "azure-services": "^1.0.0",
-        "common": "1.0.0",
-        "inversify": "^5.0.1",
-        "logger": "1.0.0",
-        "reflect-metadata": "^0.1.13",
-        "service-library": "1.0.0",
-        "storage-documents": "1.0.0",
-        "lodash": "^4.17.20",
-        "why-is-node-running": "^2.2.0",
-        "yargs": "^15.3.1"
-    }
+  "name": "web-api-scan-request-sender",
+  "version": "1.0.0",
+  "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
+  "scripts": {
+    "build": "webpack --config ./webpack.config.js --colors && node ../../create-docker-image-package-json.js",
+    "cbuild": "npm-run-all --serial clean build",
+    "clean": "rimraf dist test-results",
+    "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
+    "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
+    "test": "jest --coverage --colors"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Microsoft/accessibility-insights-service.git"
+  },
+  "author": "Microsoft",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
+  },
+  "homepage": "https://github.com/Microsoft/accessibility-insights-service/tree/master/packages/web-api-scan-request-sender#readme",
+  "devDependencies": {
+    "@types/jest": "^26.0.9",
+    "copy-webpack-plugin": "^5.1.1",
+    "fork-ts-checker-webpack-plugin": "^5.0.7",
+    "jest": "^26.1.0",
+    "jest-circus": "^26.4.0",
+    "jest-junit": "^11.1.0",
+    "mockdate": "^3.0.2",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.1.3",
+    "ts-loader": "^8.0.0",
+    "tslint": "^6.1.2",
+    "tslint-microsoft-contrib": "^6.0.0",
+    "typemoq": "^2.1.0",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
+  },
+  "dependencies": {
+    "applicationinsights": "^1.8.0",
+    "azure-services": "^1.0.0",
+    "common": "1.0.0",
+    "inversify": "^5.0.1",
+    "logger": "1.0.0",
+    "reflect-metadata": "^0.1.13",
+    "service-library": "1.0.0",
+    "storage-documents": "1.0.0",
+    "lodash": "^4.17.20",
+    "why-is-node-running": "^2.2.0",
+    "yargs": "^15.3.1"
+  }
 }
