--- a/packages/web-api-send-notification-runner/package.json
+++ b/packages/web-api-send-notification-runner/package.json
@@ -1,69 +1,69 @@
 {
-    "name": "web-api-send-notification-runner",
-    "version": "1.0.0",
-    "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
-    "scripts": {
-        "build": "webpack --config ./webpack.config.js --colors && node ../../create-docker-image-package-json.js",
-        "cbuild": "npm-run-all --serial clean build",
-        "clean": "rimraf dist test-results",
-        "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
-        "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
-        "test": "jest --coverage --colors"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Microsoft/accessibility-insights-service.git"
-    },
-    "author": "Microsoft",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
-    },
-    "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
-    "devDependencies": {
-        "@types/dotenv": "^8.2.0",
-        "@types/jest": "^26.0.9",
-        "@types/lodash": "^4.14.159",
-        "@types/request": "^2.48.5",
-        "@types/request-promise": "^4.1.46",
-        "@types/node": "^14.0.27",
-        "@types/puppeteer": "^3.0.0",
-        "@types/sha.js": "^2.4.0",
-        "@types/verror": "^1.10.4",
-        "@types/yargs": "^15.0.5",
-        "copy-webpack-plugin": "^5.1.1",
-        "fork-ts-checker-webpack-plugin": "^5.0.7",
-        "jest": "^26.1.0",
-        "jest-circus": "^26.4.0",
-        "jest-junit": "^11.1.0",
-        "mockdate": "^3.0.2",
-        "npm-run-all": "^4.1.5",
-        "rimraf": "^3.0.2",
-        "ts-jest": "^26.1.3",
-        "ts-loader": "^8.0.0",
-        "tslint": "6.1.2",
-        "tslint-microsoft-contrib": "6.0.0",
-        "typemoq": "^2.1.0",
-        "typescript": "^3.9.7",
-        "webpack": "^4.44.1",
-        "webpack-cli": "^3.3.12"
-    },
-    "dependencies": {
-        "@azure/cosmos": "^3.9.0",
-        "azure-services": "1.0.0",
-        "common": "1.0.0",
-        "dotenv": "^8.2.0",
-        "inversify": "^5.0.1",
-        "lodash": "^4.17.20",
-        "logger": "1.0.0",
-        "reflect-metadata": "^0.1.13",
-        "request": "^2.88.2",
-        "request-promise": "^4.2.6",
-        "service-library": "1.0.0",
-        "sha.js": "^2.4.11",
-        "storage-documents": "1.0.0",
-        "verror": "^1.10.0",
-        "yargs": "^15.3.1",
-        "applicationinsights": "^1.8.0"
-    }
+  "name": "web-api-send-notification-runner",
+  "version": "1.0.0",
+  "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
+  "scripts": {
+    "build": "webpack --config ./webpack.config.js --colors && node ../../create-docker-image-package-json.js",
+    "cbuild": "npm-run-all --serial clean build",
+    "clean": "rimraf dist test-results",
+    "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
+    "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
+    "test": "jest --coverage --colors"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Microsoft/accessibility-insights-service.git"
+  },
+  "author": "Microsoft",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
+  },
+  "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/jest": "^26.0.9",
+    "@types/lodash": "^4.14.159",
+    "@types/request": "^2.48.5",
+    "@types/request-promise": "^4.1.46",
+    "@types/node": "^12.12.54",
+    "@types/puppeteer": "^3.0.0",
+    "@types/sha.js": "^2.4.0",
+    "@types/verror": "^1.10.4",
+    "@types/yargs": "^15.0.5",
+    "copy-webpack-plugin": "^5.1.1",
+    "fork-ts-checker-webpack-plugin": "^5.0.7",
+    "jest": "^26.1.0",
+    "jest-circus": "^26.4.0",
+    "jest-junit": "^11.1.0",
+    "mockdate": "^3.0.2",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.1.3",
+    "ts-loader": "^8.0.0",
+    "tslint": "^6.1.2",
+    "tslint-microsoft-contrib": "^6.0.0",
+    "typemoq": "^2.1.0",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
+  },
+  "dependencies": {
+    "@azure/cosmos": "^3.9.0",
+    "azure-services": "^1.0.0",
+    "common": "1.0.0",
+    "dotenv": "^8.2.0",
+    "inversify": "^5.0.1",
+    "lodash": "^4.17.20",
+    "logger": "1.0.0",
+    "reflect-metadata": "^0.1.13",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "service-library": "1.0.0",
+    "sha.js": "^2.4.11",
+    "storage-documents": "1.0.0",
+    "verror": "^1.10.0",
+    "yargs": "^15.3.1",
+    "applicationinsights": "^1.8.0"
+  }
 }
