Set correct indent

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "bootstrap": "npx lerna bootstrap",
         "clean": "npx lerna run clean --stream && rimraf dist test-results",
-        "cbuild": "npx syncpack fix-mismatches && yarn install && npx lerna run cbuild --stream",
+        "cbuild": "npx syncpack fix-mismatches format --indent '    ' && yarn install && npx lerna run cbuild --stream",
         "build": "npx lerna run build --stream",
         "pack": "npx lerna run pack --stream",
         "test": "npx jest",
