Sync all packages versions across solution (#974)
* chore(deps-dev): bump jest-circus from 25.5.4 to 26.4.0

Bumps [jest-circus](https://github.com/facebook/jest/tree/HEAD/packages/jest-circus) from 25.5.4 to 26.4.0.
- [Release notes](https://github.com/facebook/jest/releases)
- [Changelog](https://github.com/facebook/jest/blob/master/CHANGELOG.md)
- [Commits](https://github.com/facebook/jest/commits/v26.4.0/packages/jest-circus)

Signed-off-by: dependabot-preview[bot] <support@dependabot.com>

* Sync packages versions

* Fix formatting

* Set correct indent

Co-authored-by: dependabot-preview[bot] <27856297+dependabot-preview[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "bootstrap": "npx lerna bootstrap",
         "clean": "npx lerna run clean --stream && rimraf dist test-results",
-        "cbuild": "npx lerna run cbuild --stream",
+        "cbuild": "npx syncpack fix-mismatches format --indent '    ' && yarn install && npx lerna run cbuild --stream",
         "build": "npx lerna run build --stream",
         "pack": "npx lerna run pack --stream",
         "test": "npx jest",
@@ -39,6 +39,7 @@
         "license-check-and-add": "^3.0.4",
         "npm-run-all": "^4.1.5",
         "prettier": "2.0.5",
+        "syncpack": "^5.1.4",
         "tslint": "^6.1.2",
         "tslint-lines-between-class-members": "^1.3.2",
         "tslint-microsoft-contrib": "^6.0.0",
