--- a/packages/web-workers/package.json
+++ b/packages/web-workers/package.json
@@ -28,7 +28,7 @@
         "@types/dotenv": "^8.2.0",
         "@types/jest": "^26.0.9",
         "@types/lodash": "^4.14.159",
-        "@types/node": "^14.0.27",
+        "@types/node": "^12.12.54",
         "@types/sha.js": "^2.4.0",
         "@types/verror": "^1.10.4",
         "@types/yargs": "^15.0.5",
@@ -42,15 +42,15 @@
         "rimraf": "^3.0.2",
         "ts-jest": "^26.1.3",
         "ts-loader": "^8.0.0",
-        "tslint": "6.1.2",
-        "tslint-microsoft-contrib": "6.0.0",
+        "tslint": "^6.1.2",
+        "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
         "typescript": "^3.9.7",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12"
     },
     "dependencies": {
-        "azure-services": "1.0.0",
+        "azure-services": "^1.0.0",
         "common": "1.0.0",
         "durable-functions": "^1.4.3",
         "inversify": "^5.0.1",
