--- a/packages/azure-services/package.json
+++ b/packages/azure-services/package.json
@@ -37,8 +37,8 @@
         "rimraf": "^3.0.2",
         "ts-jest": "^26.1.3",
         "ts-loader": "^8.0.0",
-        "tslint": "6.1.2",
-        "tslint-microsoft-contrib": "6.0.0",
+        "tslint": "^6.1.2",
+        "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
         "typescript": "^3.9.7",
         "webpack": "^4.44.1",
@@ -60,7 +60,7 @@
         "moment": "^2.27.0",
         "pretty-format": "^26.1.0",
         "reflect-metadata": "^0.1.13",
-        "request": "^2.88.0",
+        "request": "^2.88.2",
         "request-promise": "^4.2.6",
         "storage-documents": "1.0.0",
         "verror": "^1.10.0"
