--- a/packages/health-client/package.json
+++ b/packages/health-client/package.json
@@ -22,7 +22,7 @@
         "@types/chai": "^4.2.12",
         "@types/jest": "^26.0.9",
         "@types/lodash": "^4.14.159",
-        "@types/node": "^14.0.27",
+        "@types/node": "^12.12.54",
         "jest": "^26.1.0",
         "jest-circus": "^26.4.0",
         "jest-junit": "^11.1.0",
@@ -43,6 +43,6 @@
         "functional-tests": "1.0.0",
         "logger": "1.0.0",
         "chai": "^4.2.0",
-        "yargs": "15.3.1"
+        "yargs": "^15.3.1"
     }
 }
