--- a/packages/scanner/package.json
+++ b/packages/scanner/package.json
@@ -24,7 +24,7 @@
     "devDependencies": {
         "@types/jest": "^26.0.9",
         "@types/lodash": "^4.14.159",
-        "@types/node": "^14.0.27",
+        "@types/node": "^12.12.54",
         "@types/puppeteer": "^3.0.0",
         "jest": "^26.1.0",
         "jest-circus": "^26.4.0",
@@ -37,7 +37,7 @@
         "typescript": "^3.9.7"
     },
     "dependencies": {
-        "axe-core": "3.5.1",
+        "axe-core": "^3.5.3",
         "axe-puppeteer": "^1.1.0",
         "puppeteer": "^4.0.0",
         "common": "1.0.0",
