--- a/packages/service-library/package.json
+++ b/packages/service-library/package.json
@@ -23,7 +23,7 @@
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
         "@types/jest": "^26.0.9",
-        "@types/node": "^14.0.27",
+        "@types/node": "^12.12.54",
         "@types/puppeteer": "^3.0.0",
         "@types/sha.js": "^2.4.0",
         "@types/yargs": "^15.0.5",
@@ -41,13 +41,13 @@
     "dependencies": {
         "@azure/cosmos": "^3.9.0",
         "@azure/functions": "^1.2.2",
-        "azure-services": "1.0.0",
+        "azure-services": "^1.0.0",
         "common": "1.0.0",
         "dotenv": "^8.2.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
         "logger": "1.0.0",
-        "moment": "2.27.0",
+        "moment": "^2.27.0",
         "node-fetch": "^2.6.0",
         "puppeteer": "^4.0.0",
         "reflect-metadata": "^0.1.13",
