--- a/packages/web-api-scan-request-sender/package.json
+++ b/packages/web-api-scan-request-sender/package.json
@@ -32,8 +32,8 @@
         "rimraf": "^3.0.2",
         "ts-jest": "^26.1.3",
         "ts-loader": "^8.0.0",
-        "tslint": "6.1.2",
-        "tslint-microsoft-contrib": "6.0.0",
+        "tslint": "^6.1.2",
+        "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
         "typescript": "^3.9.7",
         "webpack": "^4.44.1",
