--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -24,7 +24,7 @@
         "@types/dotenv": "^8.2.0",
         "@types/jest": "^26.0.9",
         "@types/lodash": "^4.14.159",
-        "@types/node": "^14.0.27",
+        "@types/node": "^12.12.54",
         "@types/puppeteer": "^3.0.0",
         "@types/sha.js": "^2.4.0",
         "@types/verror": "^1.10.4",
@@ -39,8 +39,8 @@
         "rimraf": "^3.0.2",
         "ts-jest": "^26.1.3",
         "ts-loader": "^8.0.0",
-        "tslint": "6.1.2",
-        "tslint-microsoft-contrib": "6.0.0",
+        "tslint": "^6.1.2",
+        "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
         "typescript": "^3.9.7",
         "webpack": "^4.44.1",
@@ -50,10 +50,10 @@
         "accessibility-insights-report": "^1.0.3",
         "applicationinsights": "^1.8.0",
         "@azure/cosmos": "^3.9.0",
-        "axe-core": "3.5.1",
+        "axe-core": "^3.5.3",
         "axe-puppeteer": "^1.1.0",
         "axe-sarif-converter": "^2.1.0",
-        "azure-services": "1.0.0",
+        "azure-services": "^1.0.0",
         "common": "1.0.0",
         "dotenv": "^8.2.0",
         "inversify": "^5.0.1",
