--- a/packages/web-api-send-notification-job-manager/package.json
+++ b/packages/web-api-send-notification-job-manager/package.json
@@ -24,7 +24,7 @@
         "@types/dotenv": "^8.2.0",
         "@types/jest": "^26.0.9",
         "@types/lodash": "^4.14.159",
-        "@types/node": "^14.0.27",
+        "@types/node": "^12.12.54",
         "@types/verror": "^1.10.4",
         "copy-webpack-plugin": "^5.1.1",
         "fork-ts-checker-webpack-plugin": "^5.0.7",
@@ -35,8 +35,8 @@
         "rimraf": "^3.0.2",
         "ts-jest": "^26.1.3",
         "ts-loader": "^8.0.0",
-        "tslint": "6.1.2",
-        "tslint-microsoft-contrib": "6.0.0",
+        "tslint": "^6.1.2",
+        "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
         "typescript": "^3.9.7",
         "webpack": "^4.44.1",
@@ -45,7 +45,7 @@
     "dependencies": {
         "@azure/batch": "^7.0.0",
         "@azure/ms-rest-nodeauth": "^1.1.1",
-        "azure-services": "1.0.0",
+        "azure-services": "^1.0.0",
         "common": "1.0.0",
         "dotenv": "^8.2.0",
         "inversify": "^5.0.1",
