--- a/packages/web-api-send-notification-runner/package.json
+++ b/packages/web-api-send-notification-runner/package.json
@@ -26,7 +26,7 @@
         "@types/lodash": "^4.14.159",
         "@types/request": "^2.48.5",
         "@types/request-promise": "^4.1.46",
-        "@types/node": "^14.0.27",
+        "@types/node": "^12.12.54",
         "@types/puppeteer": "^3.0.0",
         "@types/sha.js": "^2.4.0",
         "@types/verror": "^1.10.4",
@@ -41,8 +41,8 @@
         "rimraf": "^3.0.2",
         "ts-jest": "^26.1.3",
         "ts-loader": "^8.0.0",
-        "tslint": "6.1.2",
-        "tslint-microsoft-contrib": "6.0.0",
+        "tslint": "^6.1.2",
+        "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
         "typescript": "^3.9.7",
         "webpack": "^4.44.1",
@@ -50,7 +50,7 @@
     },
     "dependencies": {
         "@azure/cosmos": "^3.9.0",
-        "azure-services": "1.0.0",
+        "azure-services": "^1.0.0",
         "common": "1.0.0",
         "dotenv": "^8.2.0",
         "inversify": "^5.0.1",
