--- a/packages/cli/tsconfig.sdk.json
+++ b/packages/cli/tsconfig.sdk.json
@@ -1,8 +1,8 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "outDir": "dist",
-        "declaration": true
+        "declaration": true,
+        "outDir": "dist"
     },
     "include": ["./src/index.ts"]
 }
