--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,12 +1,7 @@
 {
     "extends": "../../tsconfig.base.json",
-    "lib": ["es6", "dom"],
-    "types": ["reflect-metadata"],
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
     "compilerOptions": {
-        "outDir": "dist",
-        "target": "esnext"
+        "target": "ES2020",
+        "outDir": "dist"
     }
 }
