--- a/packages/web-api-send-notification-job-manager/tsconfig.json
+++ b/packages/web-api-send-notification-job-manager/tsconfig.json
@@ -1,10 +1,6 @@
 {
     "extends": "../../tsconfig.base.json",
-    "lib": ["es6", "dom"],
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "compilerOptions": {
-        "outDir": "dist",
-        "experimentalDecorators": true
+        "outDir": "dist"
     }
 }
