--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,9 +1,11 @@
 {
     "compilerOptions": {
-        "target": "es2015",
+        "target": "ES2019",
         "module": "commonjs",
+        "lib": ["ES2019", "dom", "dom.iterable"],
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
+        "esModuleInterop": true,
         "experimentalDecorators": true,
         "noImplicitAny": true,
         "noUnusedLocals": true,
