--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -30,11 +30,11 @@
         "@types/cheerio": "^0.22.17",
         "@types/jest": "^26.0.9",
         "@types/node": "^12.12.54",
-        "rollup": "^2.10.0",
         "jest": "^26.1.0",
         "jest-circus": "^26.4.0",
         "jest-junit": "^11.1.0",
         "rimraf": "^3.0.2",
+        "rollup": "^2.10.0",
         "ts-jest": "^26.1.3",
         "tslint": "^6.1.2",
         "tslint-microsoft-contrib": "^6.0.0",
@@ -43,21 +43,21 @@
     },
     "dependencies": {
         "@medv/finder": "^1.1.3",
-        "accessibility-insights-report": "^1.0.3",
+        "accessibility-insights-report": "2.0.0",
         "apify": "^0.21.3",
         "apify-shared": "^0.2.12",
         "axe-core": "^3.5.3",
         "axe-puppeteer": "^1.1.0",
         "cheerio": "^1.0.0-rc.3",
+        "common": "1.0.0",
         "dotenv": "^8.2.0",
         "esm": "^3.2.25",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
+        "logger": "1.0.0",
         "puppeteer": "^4.0.0",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
-        "yargs": "^15.3.1",
-        "logger": "1.0.0",
-        "common": "1.0.0"
+        "yargs": "^15.3.1"
     }
 }
