feat(axe-core-4.0.1): update axe-core from 3.5.1 to 4.0.1 (#957)

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         ]
     },
     "resolutions": {
+        "axe-core": "4.0.1",
         "jquery": "^3.5.0",
         "https-proxy-agent": "^3.0.1",
         "serialize-javascript": "^2.1.1",
