--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "accessibility-insights-scan",
-    "version": "0.2.5",
+    "version": "0.2.6",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
         "build": "webpack --config ./webpack.config.js --colors",
@@ -53,14 +53,14 @@
     },
     "dependencies": {
         "@types/escape-html": "^0.0.20",
-        "accessibility-insights-report": "^1.0.3",
-        "axe-core": "^3.5.3",
+        "accessibility-insights-report": "2.0.0",
+        "axe-core": "4.0.1",
         "axe-puppeteer": "^1.1.0",
         "cli-spinner": "^0.2.10",
         "dotenv": "^8.2.0",
-        "filenamify-url": "^2.1.1",
-        "filenamify": "^4.1.0",
         "escape-html": "^1.0.3",
+        "filenamify": "^4.1.0",
+        "filenamify-url": "^2.1.1",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
         "pretty": "^2.0.0",
