--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -47,10 +47,10 @@
         "webpack-cli": "^3.3.12"
     },
     "dependencies": {
-        "accessibility-insights-report": "^1.0.3",
-        "applicationinsights": "^1.8.0",
         "@azure/cosmos": "^3.9.0",
-        "axe-core": "^3.5.3",
+        "accessibility-insights-report": "2.0.0",
+        "applicationinsights": "^1.8.0",
+        "axe-core": "4.0.1",
         "axe-puppeteer": "^1.1.0",
         "axe-sarif-converter": "^2.1.0",
         "azure-services": "^1.0.0",
