--- a/packages/scanner/package.json
+++ b/packages/scanner/package.json
@@ -43,7 +43,7 @@
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
         "logger": "1.0.0",
-        "puppeteer": "4.0.0",
+        "puppeteer": "^4.0.0",
         "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0"
     }
