Added a wait logic for the web page rendering stabilization (#979)
* chore(deps-dev): bump jest-circus from 25.5.4 to 26.4.0

Bumps [jest-circus](https://github.com/facebook/jest/tree/HEAD/packages/jest-circus) from 25.5.4 to 26.4.0.
- [Release notes](https://github.com/facebook/jest/releases)
- [Changelog](https://github.com/facebook/jest/blob/master/CHANGELOG.md)
- [Commits](https://github.com/facebook/jest/commits/v26.4.0/packages/jest-circus)

Signed-off-by: dependabot-preview[bot] <support@dependabot.com>

* Support wait for complete page rendering

* Squashed commit of the following:

commit d4dce122a224d2297339ae9095b5c2b2dc2d146c
Merge: 347fa89 85dc5ec
Author: Maxim Laikine <la.maks@hotmail.com>
Date:   Thu Aug 20 21:10:38 2020 -0700

    Merge branch 'master' of github.com:microsoft/accessibility-insights-service

commit 85dc5ec833f442b3d9b22185165041dda76344a0
Author: AhmedAbdoOrtiga <45858632+AhmedAbdoOrtiga@users.noreply.github.com>
Date:   Wed Aug 19 20:10:04 2020 -0700

    feat(port-crawler-to-cli): Add simulator page processor (#971)

commit 906f3a4da30fd468b0831d3472f6f4010b5261ba
Author: pownkel <55459788+pownkel@users.noreply.github.com>
Date:   Wed Aug 19 09:20:21 2020 -0700

    feat(port-crawler-to-cli): set apify output directory (#970)

    * programmatically set output directory based on parameters

    * set APIFY_HEADLESS and don't reset APIFY_LOCAL_STORAGE_DIR after crawling

* Clean up

* Match ts target to node version

* Fix lint errors

* Merge with master

* Merge

* Work set

* Downgrade ts target

* Resolve dependencies

* Added uifabric module mapping

* Merge from main

Co-authored-by: dependabot-preview[bot] <27856297+dependabot-preview[bot]@users.noreply.github.com>

--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -14,6 +14,7 @@
         "type": "git",
         "url": "git+https://github.com/Microsoft/accessibility-insights-service.git"
     },
+    "main": "dist/index.js",
     "author": "Microsoft",
     "license": "MIT",
     "bugs": {
