--- a/packages/cli/.vscode/tasks.json
+++ b/packages/cli/.vscode/tasks.json
@@ -4,12 +4,16 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
-            "command": "yarn build",
-            "isShellCommand": true,
-            "showOutput": "always",
-            "args": [],
+            "type": "shell",
+            "label": "run",
+            "dependsOn": "clean",
+            "command": "tsc",
             "problemMatcher": ["$tsc"]
+        },
+        {
+            "type": "shell",
+            "label": "clean",
+            "command": "npx rimraf dist"
         }
     ]
 }
