--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -8,7 +8,8 @@
         "clean": "rimraf dist test-results",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
         "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
-        "test": "jest --coverage --colors"
+        "test": "jest --coverage --colors",
+        "npm-install": "npm install && npx npm-force-resolutions && npm install"
     },
     "repository": {
         "type": "git",
@@ -36,6 +37,7 @@
         "jest-circus": "^26.4.0",
         "jest-junit": "^11.1.0",
         "mockdate": "^3.0.2",
+        "npm-force-resolutions": "^0.0.3",
         "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.1.3",
@@ -68,5 +70,8 @@
         "storage-documents": "1.0.0",
         "verror": "^1.10.0",
         "yargs": "^15.3.1"
+    },
+    "resolutions": {
+        "axe-core": "4.0.1"
     }
 }
