--- a/packages/cli/.vscode/tasks.json
+++ b/packages/cli/.vscode/tasks.json
@@ -6,6 +6,17 @@
         {
             "type": "shell",
             "label": "run",
+            "dependsOn": "tsc",
+            "windows": {
+                "command": "xcopy ./../crawler/dist/browser-imports.js ./dist /y"
+            },
+            "osx": {
+                "command": "cp ./../crawler/dist/browser-imports.js ./dist"
+            }
+        },
+        {
+            "type": "shell",
+            "label": "tsc",
             "dependsOn": "clean",
             "command": "tsc",
             "problemMatcher": ["$tsc"]
