--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,6 +28,7 @@
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
         "@types/cli-spinner": "^0.2.0",
+        "@types/cheerio": "^0.22.21",
         "@types/jest": "^26.0.9",
         "@types/lodash": "^4.14.159",
         "@types/node": "^12.12.54",
@@ -54,8 +55,11 @@
     "dependencies": {
         "@types/escape-html": "^0.0.20",
         "accessibility-insights-report": "2.0.0",
+        "apify": "^0.21.3",
+        "apify-shared": "^0.2.12",
         "axe-core": "4.0.1",
         "axe-puppeteer": "^1.1.0",
+        "cheerio": "^1.0.0-rc.3",
         "cli-spinner": "^0.2.10",
         "dotenv": "^8.2.0",
         "escape-html": "^1.0.3",
