--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,6 +28,7 @@
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
         "@types/cli-spinner": "^0.2.0",
+        "@types/cheerio": "^0.22.21",
         "@types/jest": "^26.0.9",
         "@types/lodash": "^4.14.159",
         "@types/node": "^12.12.54",
@@ -56,6 +57,7 @@
         "accessibility-insights-report": "2.0.0",
         "axe-core": "4.0.1",
         "axe-puppeteer": "^1.1.0",
+        "cheerio": "^1.0.0-rc.3",
         "cli-spinner": "^0.2.10",
         "dotenv": "^8.2.0",
         "escape-html": "^1.0.3",
@@ -69,7 +71,8 @@
         "reflect-metadata": "^0.1.13",
         "serialize-error": "^7.0.1",
         "table": "^5.4.6",
-        "yargs": "^15.3.1"
+        "yargs": "^15.3.1",
+        "accessibility-insights-crawler": "1.0.0"
     },
     "bin": {
         "ai-scan": "dist/ai-scan-cli.js"
